data/derived/fa15/progs/unify/prog1318.ml.out
Characters 77-79:
  List.fold_left f base fs;;
                        ^^
Error: This expression has type 'a but an expression was expected of type
         ('a -> int) list
       The type variable 'a occurs inside ('a -> int) list
